2005-05-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c
	* plug-ins/helpbrowser/queue.[ch]: store the scroll offset in the
	history and set it when using the Back and Forward actions. Fixes
	bug #165022.

2005-05-26  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_set_highlight):
	destroy the regions allocated here.

2005-05-26  Sven Neumann  <sven@gimp.org>

	* app/dialogs/channel-options-dialog.c: fixed capitalization,
	removed trailing whitespace.

	* app/actions/channels-commands.c (channels_new_channel_response):
	also set the channel color if creating the channel by duplicating
	the selection.

	* app/actions/channels-commands.c
	* app/actions/qmask-commands.c: added mnemonics.

2005-05-26  Nathan Summers  <rock@gimp.org>

	* app/dialogs/channel-options-dialog.[ch]: added an "initialize from
	selection" option to the new channel dialog.

	* app/actions/channels-commands.c
	* app/actions/qmask-commands.c: modified accordingly.

2005-05-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdata.c: added more properties.

2005-05-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdata.[ch]: added MIME type as a construct property
	to GimpData.

	* app/core/gimpbrush-load.c
	* app/core/gimpbrushgenerated.c
	* app/core/gimpbrushpipe.c
	* app/core/gimpgradient-load.c
	* app/core/gimppalette.c
	* app/core/gimppattern.c: set the MIME type when loading a data
	object from file. MIME types need review and GimpPalette isn't
	quite done yet...

	* app/core/gimpdashpattern.c: cosmetics.

2005-05-25  Nathan Summers  <rock@gimp.org>

	* app/sanity.c (sanity_check_filename_encoding): made the
	G_FILENAME_ENCODING not or incorrectly set error message more
	idiomatic.

2005-05-25  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpoffsetarea.c (gimp_offset_area_expose_event):
	correctly handle very small target sizes.

2005-05-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpclipboard.[ch]: fixed gtk-doc comments.
