@@ -1,3 +1,7 @@
+2005-05-27  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpdata.c: mark properties as serializable.
+
 2005-05-26  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/helpbrowser/dialog.c
